<resources>
    <string name="app_name">HealthGO</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Password">Password</string>
    <string name="RetypePassword">Retype Password</string>
    <string name="Phone">Phone Number</string>
    <string name="Email">Email</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="FullName">Full Name</string>
    <string name="NhapEmail">Enter your email</string>
    <string name="Reset">Reset Password</string>
    <string name="facebook_app_id">286150619853360</string>
    <string name="fb_login_protocol_scheme">fb286150619853360</string>
    <string name="Logout">Log out</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="About">About HealthGO</string>
    <string name="Report">Report Error</string>
    <string name="Notification">Notification</string>

    <!--khanh's string-->
    <string name="goal">Goal</string>
    <string name="step_size">Step size</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="goal_summary">Current goal: %,d steps</string>
    <string name="step_size_summary">Current step size: %1$.2f %2$s</string>
    <string name="sign_in">Sign in with your Google account to use the Achievements and Leaderboards features</string>
    <string name="signed_in">Signed in as %s</string>
    <string name="export_summary">Save your data in a .csv file</string>
    <string name="export_title">Export/Backup</string>
    <string name="import_summary">Imports previously saved data</string>
    <string name="import_title">Import/Restore</string>
    <string name="notification">Show notification</string>
    <string name="set_goal">Set goal</string>
    <string name="set_step_size">Set step size</string>
    <string name="sign_out">Sign out</string>
    <string name="file_cant_read">Error: %s can not be read</string>
    <string name="error_file">Error accessing the file: %s</string>
    <string name="error_external_storage_not_available">Error: External storage not available</string>
    <string name="data_saved">Data saved in %s</string>
    <string name="entries_imported">%d entries imported</string>
    <string name="entries_ignored">%d entries were ignored as they did not contain valid data</string>
    <string name="entries_overwritten">%d entries were overwritten with imported data</string>
    <string name="sign_in_necessary">Sign in necessary</string>
    <string name="please_sign_in_with_your_google_account">Please sign in with your Google+ account to use this feature.</string>
    <string name="steps">steps</string>
    <string name="text_color">Text color:</string>
    <string name="background_color">Background color:</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="faq">FAQ</string>
    <string name="goal_reached_notification">Goal reached! %s steps and counting</string>
    <string name="notification_text">%s steps to go</string>
    <string name="total">Total</string>
    <string name="notification_title">Pedometer is counting</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="average">Average</string>
    <string name="record">Record</string>
    <string name="total_last_7_days">Total last 7 days</string>
    <string name="average_last_7_days">Average last 7 days</string>
    <string name="total_this_month">Total this month</string>
    <string name="average_this_month">Average this month</string>
    <string name="file_already_exists">File already exists. Are you sure you want to overwrite it?</string>
    <string name="about_text_links">This app was created by Thomas Hoffmann and updated by Projectworlds  and uses <a href="https://projectworlds.in">Projectworlds</a> by Yugesh Verma  This App is open source! .\n\n</string>
    <string name="about_app_version">App version: %s</string>
    <string name="since">Since %s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="close">close</string>
    <string name="no_split_active">No split counter active. Click start to count the steps from now on</string>
    <string name="split_count">Split count</string>
    <string name="no_sensor">Sensor not found</string>
    <string name="no_sensor_explain">This app requires a dedicated hardware step sensor - which your device does not have. This app won\'t run on your device.</string>
    <string name="permission_external_storage">No permission to access external storage</string>
    <string name="notification_settings">Notification settings</string>
    <string name="promote">Đo nhịp tim</string>
    <string name="sales_log">Theo dõi bước chạy</string>
    <string name="account_list">Tập GYM</string>
    <string name="sales_log_text">Sales Log</string>
    <string name="return_sale">Make a return</string>
    <string name="select_an_employee">Select an employee to promote</string>
    <string name="heartrate_lable">Nhịp tim</string>
    <string name="start_heartrate_button">Đo</string>
    <string name="successful_promotion">The promotion was successful.</string>
    <string name="return_successful">"The return was successful"</string>

    <string name="default_text">--</string>


    <string name="steps1">Steps: %1$d</string>
    <string name="time">Time: %1$s</string>
    <string name="speed">Average speed: %1$d steps/min</string>
    <string name="distance">Distance: %1$s m</string>
    <string name="orientation">Orientation: %1$s</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="message_sign_in">Run for your Life ...\n ....Walk for your Heart</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="instructions">Place your finger gently on the back of the camera overlapping the flashlight .\n\n DO NOT PRESS , It might break the blood flow . \n\n Try to keep the finger still as possible . \n\n Press START to start monitoring .</string>
    <string name="healthgolable">HealthGO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GoogleMapKey">AIzaSyB9rJPmnNxwgEBtUznF5C-lDtOuQgiiyw8</string>

</resources>