<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@null"
        android:background="@drawable/et_bg"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@null"
        android:background="@drawable/et_bg"
        android:backgroundTint="@null"
        android:drawableStart="@drawable/lock"
        android:drawableEnd="@drawable/invisible"
        android:drawablePadding="10dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/RetypePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@null"
        android:background="@drawable/et_bg"
        android:backgroundTint="@null"
        android:drawableStart="@drawable/lock"
        android:drawableEnd="@drawable/invisible"
        android:drawablePadding="10dp"
        android:hint="@string/RetypePassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/PhoneNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@null"
        android:background="@drawable/et_bg"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="10dp"
        android:hint="@string/Phone"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FullName"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/FullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@null"
        android:background="@drawable/et_bg"
        android:drawableStart="@drawable/user"
        android:drawablePadding="10dp"
        android:hint="@string/FullName"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RetypePassword"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/SignUp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/PhoneNum"
        app:layout_constraintStart_toStartOf="@+id/PhoneNum"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNum"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>